// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[` 1`] = `
   1 |
   2 |   enum EnumUserLanguagesSkill {
>  3 |     """
     |     ^ Unexpected block description
   4 |     basic
   5 |     """
   6 |     basic
   7 |     """
   8 |     fluent
   9 |     """
  10 |     fluent
  11 |     """
  12 |     native
  13 |     """
  14 |     native
  15 |   }
  16 |
`;

exports[` 2`] = `
   1 |
   2 |   enum EnumUserLanguagesSkill {
   3 |     """
   4 |     basic
   5 |     """
   6 |     basic
>  7 |     """
     |     ^ Unexpected block description
   8 |     fluent
   9 |     """
  10 |     fluent
  11 |     """
  12 |     native
  13 |     """
  14 |     native
  15 |   }
  16 |
`;

exports[` 3`] = `
   1 |
   2 |   enum EnumUserLanguagesSkill {
   3 |     """
   4 |     basic
   5 |     """
   6 |     basic
   7 |     """
   8 |     fluent
   9 |     """
  10 |     fluent
> 11 |     """
     |     ^ Unexpected block description
  12 |     native
  13 |     """
  14 |     native
  15 |   }
  16 |
`;

exports[` 4`] = `
   1 |
>  2 |   " Test "
     |   ^ Unexpected inline description
   3 |   type CreateOneUserPayload {
   4 |     "Created document ID"
   5 |     recordId: MongoID
   6 |
   7 |     "Created document"
   8 |     record: User
   9 |   }
  10 |
`;

exports[` 5`] = `
   1 |
   2 |   " Test "
   3 |   type CreateOneUserPayload {
>  4 |     "Created document ID"
     |     ^ Unexpected inline description
   5 |     recordId: MongoID
   6 |
   7 |     "Created document"
   8 |     record: User
   9 |   }
  10 |
`;

exports[` 6`] = `
   1 |
   2 |   " Test "
   3 |   type CreateOneUserPayload {
   4 |     "Created document ID"
   5 |     recordId: MongoID
   6 |
>  7 |     "Created document"
     |     ^ Unexpected inline description
   8 |     record: User
   9 |   }
  10 |
`;
